Prevent row collapse by just changing label color rather than removing text

--- a/docs/style.css
+++ b/docs/style.css
@@ -104,7 +104,10 @@ form label {
 }
 #question * {margin: 10px;}
 .question_cell {cursor: grab;}
-.question_cell[disabled='true'] {cursor: auto;}
+.question_cell[disabled='true'] {
+    cursor: auto;
+    color:  var(--jeopardy-blue);
+}
 
 
 .footnote {color: lightblue;}
